js/src/tests/test262/built-ins/Error/prototype/stack/setter-cross-realm.js




























var setA = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

var realmB = $262.createRealm().global;

assert.notSameValue(
  Error.prototype,
  realmB.Error.prototype,
  'precondition: the two realms have distinct Error.prototype objects'
);




var errB = new realmB.Error('msg');
assert.sameValue(
  Object.prototype.hasOwnProperty.call(errB, 'stack'),
  false,
  'precondition: cross-realm Error instance has no own "stack" property'
);

setA.call(errB, 'sentinel');

verifyProperty(errB, 'stack', {
  value: 'sentinel',
  writable: true,
  enumerable: true,
  configurable: true,
});



var plainB = new realmB.Object();
setA.call(plainB, 'plain');

verifyProperty(plainB, 'stack', {
  value: 'plain',
  writable: true,
  enumerable: true,
  configurable: true,
});


var setB = Object.getOwnPropertyDescriptor(realmB.Error.prototype, 'stack').set;
assert.sameValue(typeof setB, 'function', 'realm B has its own setter');
assert.notSameValue(setA, setB, 'the two realms have distinct setter functions');








assert.throws(realmB.TypeError, function () {
  setA.call(realmB.Error.prototype, 'should-throw');
}, 'realm A setter on realm B Error.prototype throws (via realm B setter)');



assert.throws(TypeError, function () {
  setA.call(Error.prototype, 'should-throw');
}, 'realm A setter on realm A Error.prototype throws via SameValue');

reportCompare(0, 0);
